--- a/src/app/landing-page-real/landing-page-real.component.html
+++ b/src/app/landing-page-real/landing-page-real.component.html
@@ -32,3 +32,162 @@
     <img src="assets/vuelos.png" alt="Vuelos" class="imagen-boton" />
     <img src="assets/autos.png" alt="Autos" class="imagen-boton" />
 </section>
+<section id="third-section">
+    <h1 class="title">Planes destacados</h1>
+    <div class="planes-container">
+        <div class="card">
+            <div id="card-imagen-1">
+                <br>
+            </div>
+            <div class="card-contenido">
+                <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 21.019q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814" />
+                </svg>
+                <p class="card-p">
+                    San José, Costa Rica <br>
+                    Plan de 5 días <br>
+                    $$$ <br>
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div id="card-imagen-2">
+                <br>
+            </div>
+            <div class="card-contenido">
+                <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 21.019q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814" />
+                </svg>
+                <p class="card-p">
+                    San José, Costa Rica <br>
+                    Plan de 5 días <br>
+                    $$$ <br>
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div id="card-imagen-3">
+                <br>
+            </div>
+            <div class="card-contenido">
+                <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 21.019q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814" />
+                </svg>
+                <p class="card-p">
+                    Eje Cafetero, Colombia <br>
+                    Plan de 1 días <br>
+                    $$ <br>
+                </p>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section id="fourth-section">
+    <div class="titulo-fourth-section">
+        <h1 class="title">Planea tu siguiente viaje</h1>
+        <h1 class="title">en 5, 4, 3, 2, 1...</h1>
+
+    </div>
+    <div class="fourth-section-contenido">
+        <div class="izquierda">
+            <div class="fourth-section-item">
+                <svg class="fourth-section-icon" xmlns="http://www.w3.org/2000/svg" width="72" height="72"
+                    viewBox="0 0 512 512">
+                    <path fill="currentColor"
+                        d="M158.152 21c50.525 10.105 97.448 23.812 135.04 46.849L316.7 108.38l104.572 41.342c-4.774 32.838-38.956 77.93-59.987 117.542l-47.017 20.671c.2 18.24-25.396 43.977-40.531 61l-23.914-7.498l10.944 19.658c-9.25 18.14-27.763 23.432-44.99 33.844l-12.565 68.498l19.455 18.645L207.265 491l-37.695-22.292c-1.518-77.714 1.599-155.383 3.648-233.058c-38.693-13.55-56.957-53.469-81.874-85.116c-2.114-2.685.268-41.208 22.292-56.34l5.434-35.19C133.412 43.898 135.746 37.722 158.152 21" />
+                </svg>
+                <p>Elige un destino</p><br>
+
+            </div>
+            <div class="fourth-section-item">
+                <svg class="fourth-section-icon" xmlns="http://www.w3.org/2000/svg" width="72" height="72"
+                    viewBox="0 0 56 56">
+                    <path fill="currentColor" fill-rule="evenodd"
+                        d="m49.336 12.768l1.152 4.298a3.2 3.2 0 0 1-.967 3.22l-.155.13a5.001 5.001 0 0 0 2.218 8.87l.216.033a3.077 3.077 0 0 1 2.575 2.255l1.173 4.376a4 4 0 0 1-2.828 4.9L12.15 51.72a4 4 0 0 1-4.898-2.829l-1.103-4.117a3.485 3.485 0 0 1 .997-3.459l.163-.14a5.001 5.001 0 0 0-2.37-8.813a3.46 3.46 0 0 1-2.791-2.52L1.04 25.709a4 4 0 0 1 2.83-4.899L44.437 9.94a4 4 0 0 1 4.9 2.828m-4.165.607L4.951 24.152c-.555.149-.885.72-.736 1.275l.791 2.953a9.368 9.368 0 0 1 7.2 6.76a9.368 9.368 0 0 1-2.855 9.455l.791 2.953c.15.555.72.885 1.275.736l40.22-10.777c.555-.149.885-.72.736-1.275l-.79-2.952a9.369 9.369 0 0 1-7.2-6.761a9.368 9.368 0 0 1 2.854-9.455l-.791-2.953a1.041 1.041 0 0 0-1.275-.736m-1.283 21.559a3 3 0 1 1-5.796 1.552a3 3 0 0 1 5.796-1.552m-2.07-7.728a3 3 0 1 1-5.796 1.553a3 3 0 0 1 5.795-1.553m-2.071-7.727a3 3 0 1 1-5.796 1.553a3 3 0 0 1 5.796-1.553M29.383 6.347l2.552 3.644c.037.054.073.109.107.164L7.627 16.697L23.812 5.364a4 4 0 0 1 5.57.983" />
+                </svg>
+                <p>Selecciona planes u organiza tus propias actividades</p><br>
+            </div>
+            <div class="fourth-section-item">
+                <svg class="fourth-section-icon" xmlns="http://www.w3.org/2000/svg" width="72" height="72"
+                    viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M3.414 13.778L2 15.192l4.949 2.121l2.122 4.95l1.414-1.414l-.707-3.536L13.091 14l3.61 7.704l1.339-1.339l-1.19-10.123l2.828-2.829a2 2 0 1 0-2.828-2.828l-2.903 2.903L3.824 6.297L2.559 7.563l7.644 3.67l-3.253 3.253z" />
+                </svg>
+                <p>Busca hospedaje y tiquetes</p><br>
+            </div>
+            <div class="fourth-section-item">
+                <svg class="fourth-section-icon" xmlns="http://www.w3.org/2000/svg" width="72" height="72"
+                    viewBox="0 0 20 20">
+                    <path fill="currentColor"
+                        d="M10.002 1.642a1.5 1.5 0 0 1 2.175-.307l3.27 2.655A1.5 1.5 0 0 1 15.741 6h-1.22l.39-.559a.5.5 0 0 0-.094-.675L13.133 3.4L11.337 6H10.12l2.234-3.232l-.808-.656a.5.5 0 0 0-.725.102L8.18 5.999H6.96zM13.5 12a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm-9-7h2.169l-.7 1H4.5a.5.5 0 0 0 0 1H15a2 2 0 0 1 2 2v6a2 2 0 0 1-2 2H5.5A2.5 2.5 0 0 1 3 14.5v-8A1.5 1.5 0 0 1 4.5 5M4 14.5A1.5 1.5 0 0 0 5.5 16H15a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1H4.5c-.175 0-.344-.03-.5-.085z" />
+                </svg>
+                <p>Recarga tu billetera virtual</p><br>
+            </div>
+            <div class="fourth-section-item">
+                <svg class="fourth-section-icon" xmlns="http://www.w3.org/2000/svg" width="72" height="72"
+                    viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M19 6h-2c0-2.8-2.2-5-5-5S7 3.2 7 6H5c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2m-7-3c1.7 0 3 1.3 3 3H9c0-1.7 1.3-3 3-3m7 17H5V8h14zm-7-8c-1.7 0-3-1.3-3-3H7c0 2.8 2.2 5 5 5s5-2.2 5-5h-2c0 1.7-1.3 3-3 3" />
+                </svg>
+                <p>¡Y compra! Todo en un mismo lugar</p><br>
+            </div>
+        </div>
+        <div class="derecha">
+            <button id="planifica">¡Planifica!</button>
+        </div>
+
+    </div>
+</section>
+<section id="fifth-section">
+    <h1 id="fifth-section-title">Testimonios</h1>
+    <div class="testimonio">
+        <div class="derecha-fifth">
+            <div class="image-fifth">
+                <br>
+            </div>
+
+        </div>
+        <div class="izquierda-fifth">
+            <p>
+                ¡Increíble experiencia! Después de completar una sencilla encuesta sobre mis intereses y preferencias de
+                viaje, recibí recomendaciones perfectas que se adaptaban a mis gustos. ¡Definitivamente recomendaría
+                esta página a cualquiera que busque un viaje a medida que se ajuste a sus necesidades y deseos!
+
+            </p>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <div id="contenedor-partners">
+        <div class="partner">
+            <img src="../../assets/Partner1.png" alt="Partner 1">
+        </div>
+        <div class="partner">
+            <img src="../../assets/Partner2.jpg" alt="Partner 2">
+        </div>
+        <div class="partner">
+            <img src="../../assets/Partner3.png" alt="Partner 3">
+        </div>
+        <div class="partner">
+            <img src="../../assets/Partner4.png" alt="Partner 4">
+        </div>
+    </div>
+    <div id="footer-text">
+        <div id="footer-text-izquierda">
+            <img id="titulo-logo" src="../../assets/titulo-logo.png" alt="Logo de ExploreNest">
+            <p id="texto-titlulo-logo">
+                Descubre nuevos horizontes desde la seguridad de tu nido
+            </p>
+        </div>
+        <div id="footer-text-derecha">
+            <a class="link-footer">¿Quiénes somos?</a>
+            <a class="link-footer">Contacto</a>
+            <a class="link-footer">Ayuda/FAQ</a>
+        </div>
+    </div>
+</footer>
