--- a/src/app/cuestionario/cuestionario.component.css
+++ b/src/app/cuestionario/cuestionario.component.css
@@ -83,6 +83,7 @@
     width: 70%;
     background-color: #FEE2B3;
     border-radius: 15px;
+    box-shadow:-5px 5px 5px 0 rgb(115, 112, 112, 0.5);
 }
 .d2{
     font-size: 1.5rem;
@@ -93,5 +94,229 @@
     margin-top: 20px;
     background-color: #FEE2B3;
     border-radius: 15px;
+    box-shadow: -5px 5px 5px 0 rgb(115, 112, 112, 0.5);
 }
 
+/*--------segunda seccion---------*/
+
+#second-section {
+    background-image: url("src/assets/background-form-2.png");
+    background-size: cover;
+    height: 80vh !important;
+}
+.main-2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+  /*--------tercera seccion---------*/
+  #third-section {
+    background-image: url("src/assets/background-form-3.png");
+    background-size: cover;
+    height: 90vh !important;
+
+}
+.main-3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10%;
+}
+
+/*--------cuarta seccion---------*/
+
+#fourth-section {
+    background-image: url("src/assets/background-form-4.png");
+    background-size: cover;
+    height: 90vh !important;
+}
+
+.main-4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10%;
+}
+
+/*--------quinta seccion---------*/
+
+#fifth-section {
+    background-image: url("src/assets/background-form-3.png");
+    background-size: cover;
+    height: 100vh !important;
+}
+.main-5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10%;
+}
+
+/*--------sexta seccion---------*/
+
+#sixth-section {
+    background-image: url("src/assets/background-form-5.png");
+    background-size: cover;
+    height: 120vh !important;
+}
+.main-6{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10%;
+}
+.boton{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    height: 45vh;
+}
+.btn-siguiente{
+  font-family: 'League Spartan', sans-serif; 
+  font-size: 2rem; 
+  color: #D66B52; 
+  background-color: #FEE2B3;
+  border: none; 
+  border-radius: 35px; 
+  padding: 10px 20px;
+  max-width: 15%;
+  max-height: 50px;
+  cursor: pointer; 
+  transition: box-shadow 0.3s;
+  justify-content: center; 
+  align-items: center;
+  position: relative;
+  display: flex;
+}
+
+.btn-siguiente:hover {
+  background-color: #FAD7A0; 
+  transition: box-shadow 0.3s;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  outline: none;
+}
+
+
+/*--------todos---------*/
+
+.preguntas{
+    font-size: 3rem;
+    line-height: 1.1;
+    color: #1A224E;
+    font-family: 'League Spartan', sans-serif;
+    width: 50%;
+    margin-top: 10%;
+    text-align: center;
+}
+.op{
+    margin-left: 0%;
+    font-family: 'Sanchez', sans-serif; 
+    font-size: 25px;
+    line-height: 1.0;
+    width: 80%;
+}
+
+.checkbox-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
+    justify-content: space-evenly; 
+    align-items: flex-start; 
+    gap: 10px;
+    flex-wrap: wrap;
+    
+  }
+
+.checkbox-row {
+    display: flex;
+    margin-bottom: 10px;
+    margin-left: 10%;
+    display: flex;
+    justify-content: flex-start;  
+    width: calc(75% - 5px); 
+  }
+  
+  
+  .custom-checkbox {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    background: #E4F0FF;
+    border-radius: 25px;
+    padding: 10px 20px; 
+    width: calc(50% - 5px);  
+    cursor: pointer;
+    user-select: none;
+    transition: box-shadow 0.3s;
+    padding-left: 15%;
+    margin-left: 10%;
+    margin-top: 9%;
+    margin-bottom: 5px; 
+    position: relative;
+  }
+  
+  .custom-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  .checkmark {
+    position: absolute;
+    top: 28%;
+    left: 10px;
+    right:3px;
+    height: 25px;
+    width: 25px;
+    background-color: #032466;
+    border-radius: 50%;
+  }
+  
+  .custom-checkbox input:checked ~ .checkmark {
+    background-color: #032466;
+  }
+  
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  .custom-checkbox input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  .custom-checkbox .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
+  
+  .custom-checkbox {
+    background: #E4F0FF;
+    border-radius: 25px;
+    padding: 10px 20px;
+    width: 50%;  
+  }
+  
+  .custom-checkbox:hover {
+    background-color: #E4F0FF; 
+  }
+  .custom-checkbox {
+    transition: box-shadow 0.3s;
+  }
+  
+  .custom-checkbox:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
