--- a/src/app/pagina-exito/pagina-exito.component.html
+++ b/src/app/pagina-exito/pagina-exito.component.html
@@ -1,1 +1,12 @@
-<p>pagina-exito works!</p>
+<div id="main">
+    <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
+    <p id="text">
+        ¡Tu plan ha sido creado exitosamente! <br>
+        Revisa tu correo y evalúa el plan <br>
+        Si tomaste la mejor decisión, contáctanos al +57 (601) 3415373 <br>
+    </p>
+    <p>
+    </p>
+    <p>
+    </p>
+</div>
